[sensors][win] Reverse axis signs for motion sensors

This CL reverses axis signs for gyroscope, magnetometer and absolute
orientation sensors. Before the change, wrong coordinate system was
used based on the accelerometer's data. Integrating Motion and Orientation
Sensors [1] document, explains what coordinate system must be used and why
accelerometer's measurements differ from other platforms.

[1] https://msdn.microsoft.com/en-us/library/windows/hardware/dn642102(v=vs.85).aspx

Bug: 786252
Change-Id: I4afbc1a1d5fb03c3e2e0538a8ea7424c40020eca
Reviewed-on: https://chromium-review.googlesource.com/804624
Reviewed-by: Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com>
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Reviewed-by: Jun Cai <juncai@chromium.org>
Commit-Queue: Alexander Shalamov <alexander.shalamov@intel.com>
Cr-Commit-Position: refs/heads/master@{#522380}
Former-commit-id: cf13abba80471edc4ad83ea3455684f691df3a3f